--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -20,36 +20,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-28T23:13:30.908060Z",
-     "iopub.status.busy": "2024-12-28T23:13:30.907555Z",
-     "iopub.status.idle": "2024-12-28T23:13:30.916931Z",
-     "shell.execute_reply": "2024-12-28T23:13:30.916157Z",
-     "shell.execute_reply.started": "2024-12-28T23:13:30.908021Z"
+     "iopub.execute_input": "2024-12-29T00:26:20.655186Z",
+     "iopub.status.busy": "2024-12-29T00:26:20.654588Z",
+     "iopub.status.idle": "2024-12-29T00:26:20.662167Z",
+     "shell.execute_reply": "2024-12-29T00:26:20.661090Z",
+     "shell.execute_reply.started": "2024-12-29T00:26:20.655145Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "┌───────┐\n",
-      "│   a   │\n",
-      "│ int64 │\n",
-      "├───────┤\n",
-      "│     0 │\n",
-      "└───────┘\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'a': [1], 'b': [2], 'c': [3]}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-29T00:26:51.980414Z",
+     "iopub.status.busy": "2024-12-29T00:26:51.979462Z",
+     "iopub.status.idle": "2024-12-29T00:26:51.990654Z",
+     "shell.execute_reply": "2024-12-29T00:26:51.989832Z",
+     "shell.execute_reply.started": "2024-12-29T00:26:51.980319Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┬───────┬───────┐\n",
+       "│   a   │   b   │   c   │\n",
+       "│ int64 │ int64 │ int64 │\n",
+       "├───────┼───────┼───────┤\n",
+       "│     1 │     2 │     3 │\n",
+       "└───────┴───────┴───────┘"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame({'a': [0]})\n",
+    "d = dict(\n",
+    "    a = [1],\n",
+    "    b = [2],\n",
+    "    c = [3],\n",
+    ")\n",
     "\n",
+    "df = pd.DataFrame(d)\n",
     "t = uck.Table(df)\n",
-    "print(t)"
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-29T00:27:52.569051Z",
+     "iopub.status.busy": "2024-12-29T00:27:52.568383Z",
+     "iopub.status.idle": "2024-12-29T00:27:52.576775Z",
+     "shell.execute_reply": "2024-12-29T00:27:52.576049Z",
+     "shell.execute_reply.started": "2024-12-29T00:27:52.568998Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': np.int64(1), 'b': np.int64(2), 'c': np.int64(3)}"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.asdict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-29T00:27:22.156150Z",
+     "iopub.status.busy": "2024-12-29T00:27:22.155608Z",
+     "iopub.status.idle": "2024-12-29T00:27:22.164264Z",
+     "shell.execute_reply": "2024-12-29T00:27:22.163371Z",
+     "shell.execute_reply.started": "2024-12-29T00:27:22.156110Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': np.int64(1), 'b': np.int64(2), 'c': np.int64(3)}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.do(dict)"
    ]
   },
   {
