--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -20,29 +20,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T00:26:20.655186Z",
-     "iopub.status.busy": "2024-12-29T00:26:20.654588Z",
-     "iopub.status.idle": "2024-12-29T00:26:20.662167Z",
-     "shell.execute_reply": "2024-12-29T00:26:20.661090Z",
-     "shell.execute_reply.started": "2024-12-29T00:26:20.655145Z"
+     "iopub.execute_input": "2024-12-29T00:51:53.479301Z",
+     "iopub.status.busy": "2024-12-29T00:51:53.478740Z",
+     "iopub.status.idle": "2024-12-29T00:51:53.517595Z",
+     "shell.execute_reply": "2024-12-29T00:51:53.517041Z",
+     "shell.execute_reply.started": "2024-12-29T00:51:53.479263Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'a': [1], 'b': [2], 'c': [3]}"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Expected to be Table or Database: 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[82], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      4\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m0\u001b[39m]})\n\u001b[0;32m----> 6\u001b[0m \u001b[43muck\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfoo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mselect *\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/work/duckboat/env/lib/python3.12/site-packages/duckboat/mixin_do.py:73\u001b[0m, in \u001b[0;36mDoMixin.do\u001b[0;34m(self, *others)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdo\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39mothers):\n\u001b[0;32m---> 73\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_do\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mothers\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/work/duckboat/env/lib/python3.12/site-packages/duckboat/mixin_do.py:67\u001b[0m, in \u001b[0;36m_do\u001b[0;34m(A, *xs)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_do\u001b[39m(A, \u001b[38;5;241m*\u001b[39mxs):\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m xs:\n\u001b[0;32m---> 67\u001b[0m         A \u001b[38;5;241m=\u001b[39m \u001b[43mdo_one\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m A\n",
+      "File \u001b[0;32m~/work/duckboat/env/lib/python3.12/site-packages/duckboat/mixin_do.py:28\u001b[0m, in \u001b[0;36mdo_one\u001b[0;34m(A, x)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatabase\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Database\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(A, (Table, Database)):\n\u001b[0;32m---> 28\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mExpected to be Table or Database: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mA\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     30\u001b[0m x \u001b[38;5;241m=\u001b[39m _get_if_file(x)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (x \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124marrow\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (x \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpandas\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
+      "\u001b[0;31mValueError\u001b[0m: Expected to be Table or Database: 1"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "def foo(x):\n",
+    "    return 1\n",
+    "\n",
+    "df = pd.DataFrame({'a': [0]})\n",
+    "\n",
+    "uck.Table(df).do(foo, 'select *')"
+   ]
   },
   {
    "cell_type": "code",
