--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -20,6 +20,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-29T01:02:09.595568Z",
+     "iopub.status.busy": "2024-12-29T01:02:09.595038Z",
+     "iopub.status.idle": "2024-12-29T01:02:09.610714Z",
+     "shell.execute_reply": "2024-12-29T01:02:09.609988Z",
+     "shell.execute_reply.started": "2024-12-29T01:02:09.595532Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database:\n",
+       "    bah: 1 x ['a']"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'a': [0]})\n",
+    "t = uck.Table(df)\n",
+    "t.do('alias bah')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "metadata": {
     "execution": {
