--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -20,33 +20,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T01:02:09.595568Z",
-     "iopub.status.busy": "2024-12-29T01:02:09.595038Z",
-     "iopub.status.idle": "2024-12-29T01:02:09.610714Z",
-     "shell.execute_reply": "2024-12-29T01:02:09.609988Z",
-     "shell.execute_reply.started": "2024-12-29T01:02:09.595532Z"
+     "iopub.execute_input": "2024-12-29T01:12:10.214302Z",
+     "iopub.status.busy": "2024-12-29T01:12:10.213730Z",
+     "iopub.status.idle": "2024-12-29T01:12:10.223457Z",
+     "shell.execute_reply": "2024-12-29T01:12:10.222785Z",
+     "shell.execute_reply.started": "2024-12-29T01:12:10.214261Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Database:\n",
-       "    bah: 1 x ['a']"
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame({'a': [0]})\n",
+    "df = pd.DataFrame({'a': range(10)})\n",
     "t = uck.Table(df)\n",
-    "t.do('alias bah')"
+    "t.do(list)"
    ]
   },
   {
