--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -20,32 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T01:12:10.214302Z",
-     "iopub.status.busy": "2024-12-29T01:12:10.213730Z",
-     "iopub.status.idle": "2024-12-29T01:12:10.223457Z",
-     "shell.execute_reply": "2024-12-29T01:12:10.222785Z",
-     "shell.execute_reply.started": "2024-12-29T01:12:10.214261Z"
+     "iopub.execute_input": "2024-12-29T01:29:43.084877Z",
+     "iopub.status.busy": "2024-12-29T01:29:43.084184Z",
+     "iopub.status.idle": "2024-12-29T01:29:43.094009Z",
+     "shell.execute_reply": "2024-12-29T01:29:43.093288Z",
+     "shell.execute_reply.started": "2024-12-29T01:29:43.084824Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame({'a': range(10)})\n",
     "t = uck.Table(df)\n",
-    "t.do(list)"
+    "\n",
+    "t.save('ten.csv')"
    ]
   },
   {
