just one file to go

--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -20,23 +20,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 96,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T01:29:43.084877Z",
-     "iopub.status.busy": "2024-12-29T01:29:43.084184Z",
-     "iopub.status.idle": "2024-12-29T01:29:43.094009Z",
-     "shell.execute_reply": "2024-12-29T01:29:43.093288Z",
-     "shell.execute_reply.started": "2024-12-29T01:29:43.084824Z"
+     "iopub.execute_input": "2024-12-29T01:41:24.694071Z",
+     "iopub.status.busy": "2024-12-29T01:41:24.693496Z",
+     "iopub.status.idle": "2024-12-29T01:41:24.703366Z",
+     "shell.execute_reply": "2024-12-29T01:41:24.702530Z",
+     "shell.execute_reply.started": "2024-12-29T01:41:24.694029Z"
     }
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame({'a': range(10)})\n",
-    "t = uck.Table(df)\n",
-    "\n",
-    "t.save('ten.csv')"
+    "a = pd.DataFrame({'x': range(10)})\n",
+    "b = pd.DataFrame({'x': range(20)})\n",
+    "db = uck.Database(a=a, b=b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-29T01:45:24.257147Z",
+     "iopub.status.busy": "2024-12-29T01:45:24.256263Z",
+     "iopub.status.idle": "2024-12-29T01:45:24.272087Z",
+     "shell.execute_reply": "2024-12-29T01:45:24.271384Z",
+     "shell.execute_reply.started": "2024-12-29T01:45:24.257107Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database:\n",
+       "    a: 10 x ['x']\n",
+       "    b: 20 x ['x']"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
