--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -2,39 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-28T22:50:53.469497Z",
-     "iopub.status.busy": "2024-12-28T22:50:53.469212Z",
-     "iopub.status.idle": "2024-12-28T22:50:53.763571Z",
-     "shell.execute_reply": "2024-12-28T22:50:53.763299Z",
-     "shell.execute_reply.started": "2024-12-28T22:50:53.469471Z"
+     "iopub.execute_input": "2024-12-29T01:51:02.887774Z",
+     "iopub.status.busy": "2024-12-29T01:51:02.887253Z",
+     "iopub.status.idle": "2024-12-29T01:51:02.893349Z",
+     "shell.execute_reply": "2024-12-29T01:51:02.892170Z",
+     "shell.execute_reply.started": "2024-12-29T01:51:02.887736Z"
     }
    },
    "outputs": [],
    "source": [
     "import duckboat as uck\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 104,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T01:41:24.694071Z",
-     "iopub.status.busy": "2024-12-29T01:41:24.693496Z",
-     "iopub.status.idle": "2024-12-29T01:41:24.703366Z",
-     "shell.execute_reply": "2024-12-29T01:41:24.702530Z",
-     "shell.execute_reply.started": "2024-12-29T01:41:24.694029Z"
+     "iopub.execute_input": "2024-12-29T01:51:37.642653Z",
+     "iopub.status.busy": "2024-12-29T01:51:37.642186Z",
+     "iopub.status.idle": "2024-12-29T01:51:37.648580Z",
+     "shell.execute_reply": "2024-12-29T01:51:37.647847Z",
+     "shell.execute_reply.started": "2024-12-29T01:51:37.642623Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = pd.DataFrame({'x': range(10)})\n",
-    "b = pd.DataFrame({'x': range(20)})\n",
-    "db = uck.Database(a=a, b=b)"
+    "range(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-29T01:52:38.983054Z",
+     "iopub.status.busy": "2024-12-29T01:52:38.982573Z",
+     "iopub.status.idle": "2024-12-29T01:52:38.996812Z",
+     "shell.execute_reply": "2024-12-29T01:52:38.996048Z",
+     "shell.execute_reply.started": "2024-12-29T01:52:38.983022Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(np.zeros((1,10)))\n",
+    "t = uck.Table(df)\n",
+    "t.do(list) == [0.0]*10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-29T01:52:18.867892Z",
+     "iopub.status.busy": "2024-12-29T01:52:18.867354Z",
+     "iopub.status.idle": "2024-12-29T01:52:18.876862Z",
+     "shell.execute_reply": "2024-12-29T01:52:18.876214Z",
+     "shell.execute_reply.started": "2024-12-29T01:52:18.867854Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌────────┬────────┬────────┬────────┬────────┬────────┬────────┬────────┬────────┬────────┐\n",
+       "│   0    │   1    │   2    │   3    │   4    │   5    │   6    │   7    │   8    │   9    │\n",
+       "│ double │ double │ double │ double │ double │ double │ double │ double │ double │ double │\n",
+       "├────────┼────────┼────────┼────────┼────────┼────────┼────────┼────────┼────────┼────────┤\n",
+       "│    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │\n",
+       "└────────┴────────┴────────┴────────┴────────┴────────┴────────┴────────┴────────┴────────┘"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
    ]
   },
   {
