better csv test

--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T01:51:02.887774Z",
-     "iopub.status.busy": "2024-12-29T01:51:02.887253Z",
-     "iopub.status.idle": "2024-12-29T01:51:02.893349Z",
-     "shell.execute_reply": "2024-12-29T01:51:02.892170Z",
-     "shell.execute_reply.started": "2024-12-29T01:51:02.887736Z"
+     "iopub.execute_input": "2024-12-29T02:01:33.021395Z",
+     "iopub.status.busy": "2024-12-29T02:01:33.021104Z",
+     "iopub.status.idle": "2024-12-29T02:01:33.245377Z",
+     "shell.execute_reply": "2024-12-29T02:01:33.245081Z",
+     "shell.execute_reply.started": "2024-12-29T02:01:33.021364Z"
     }
    },
    "outputs": [],
@@ -21,93 +21,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T01:51:37.642653Z",
-     "iopub.status.busy": "2024-12-29T01:51:37.642186Z",
-     "iopub.status.idle": "2024-12-29T01:51:37.648580Z",
-     "shell.execute_reply": "2024-12-29T01:51:37.647847Z",
-     "shell.execute_reply.started": "2024-12-29T01:51:37.642623Z"
+     "iopub.execute_input": "2024-12-29T02:05:18.934292Z",
+     "iopub.status.busy": "2024-12-29T02:05:18.933693Z",
+     "iopub.status.idle": "2024-12-29T02:05:18.947478Z",
+     "shell.execute_reply": "2024-12-29T02:05:18.947036Z",
+     "shell.execute_reply.started": "2024-12-29T02:05:18.934248Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "range(0, 10)"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "range(10)"
+    "import tempfile\n",
+    "\n",
+    "df = pd.DataFrame({'a': range(10), 'b': range(10)})\n",
+    "t1 = uck.Table(df)\n",
+    "\n",
+    "with tempfile.NamedTemporaryFile(suffix='.csv') as tf:\n",
+    "    name = tf.name\n",
+    "    t1.save(name)\n",
+    "    t2 = uck.Table(name)\n",
+    "    assert repr(t1) == repr(t2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T01:52:38.983054Z",
-     "iopub.status.busy": "2024-12-29T01:52:38.982573Z",
-     "iopub.status.idle": "2024-12-29T01:52:38.996812Z",
-     "shell.execute_reply": "2024-12-29T01:52:38.996048Z",
-     "shell.execute_reply.started": "2024-12-29T01:52:38.983022Z"
+     "iopub.execute_input": "2024-12-29T02:04:30.172088Z",
+     "iopub.status.busy": "2024-12-29T02:04:30.171394Z",
+     "iopub.status.idle": "2024-12-29T02:04:30.178688Z",
+     "shell.execute_reply": "2024-12-29T02:04:30.177581Z",
+     "shell.execute_reply.started": "2024-12-29T02:04:30.172031Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────┬───────┐\n",
+      "│   a   │   b   │\n",
+      "│ int64 │ int64 │\n",
+      "├───────┼───────┤\n",
+      "│     0 │     0 │\n",
+      "│     1 │     1 │\n",
+      "│     2 │     2 │\n",
+      "│     3 │     3 │\n",
+      "│     4 │     4 │\n",
+      "│     5 │     5 │\n",
+      "│     6 │     6 │\n",
+      "│     7 │     7 │\n",
+      "│     8 │     8 │\n",
+      "│     9 │     9 │\n",
+      "├───────┴───────┤\n",
+      "│    10 rows    │\n",
+      "└───────────────┘\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "df = pd.DataFrame(np.zeros((1,10)))\n",
-    "t = uck.Table(df)\n",
-    "t.do(list) == [0.0]*10"
+    "print(t1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T01:52:18.867892Z",
-     "iopub.status.busy": "2024-12-29T01:52:18.867354Z",
-     "iopub.status.idle": "2024-12-29T01:52:18.876862Z",
-     "shell.execute_reply": "2024-12-29T01:52:18.876214Z",
-     "shell.execute_reply.started": "2024-12-29T01:52:18.867854Z"
+     "iopub.execute_input": "2024-12-29T02:04:30.683922Z",
+     "iopub.status.busy": "2024-12-29T02:04:30.682900Z",
+     "iopub.status.idle": "2024-12-29T02:04:30.693808Z",
+     "shell.execute_reply": "2024-12-29T02:04:30.692823Z",
+     "shell.execute_reply.started": "2024-12-29T02:04:30.683874Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────┬───────┐\n",
+      "│   a   │   b   │\n",
+      "│ int64 │ int64 │\n",
+      "├───────┼───────┤\n",
+      "│     0 │     0 │\n",
+      "│     1 │     1 │\n",
+      "│     2 │     2 │\n",
+      "│     3 │     3 │\n",
+      "│     4 │     4 │\n",
+      "│     5 │     5 │\n",
+      "│     6 │     6 │\n",
+      "│     7 │     7 │\n",
+      "│     8 │     8 │\n",
+      "│     9 │     9 │\n",
+      "├───────┴───────┤\n",
+      "│    10 rows    │\n",
+      "└───────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-29T02:01:43.088272Z",
+     "iopub.status.busy": "2024-12-29T02:01:43.087358Z",
+     "iopub.status.idle": "2024-12-29T02:01:43.094574Z",
+     "shell.execute_reply": "2024-12-29T02:01:43.093594Z",
+     "shell.execute_reply.started": "2024-12-29T02:01:43.088229Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "┌────────┬────────┬────────┬────────┬────────┬────────┬────────┬────────┬────────┬────────┐\n",
-       "│   0    │   1    │   2    │   3    │   4    │   5    │   6    │   7    │   8    │   9    │\n",
-       "│ double │ double │ double │ double │ double │ double │ double │ double │ double │ double │\n",
-       "├────────┼────────┼────────┼────────┼────────┼────────┼────────┼────────┼────────┼────────┤\n",
-       "│    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │    0.0 │\n",
-       "└────────┴────────┴────────┴────────┴────────┴────────┴────────┴────────┴────────┴────────┘"
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m <no docstring>\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/work/duckboat/env/lib/python3.12/site-packages/duckboat/mixin_table.py\n",
+       "\u001b[0;31mType:\u001b[0m      method"
       ]
      },
-     "execution_count": 112,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "t"
+    "t.save?"
    ]
   },
   {
