--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -21,29 +21,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-29T02:05:18.934292Z",
-     "iopub.status.busy": "2024-12-29T02:05:18.933693Z",
-     "iopub.status.idle": "2024-12-29T02:05:18.947478Z",
-     "shell.execute_reply": "2024-12-29T02:05:18.947036Z",
-     "shell.execute_reply.started": "2024-12-29T02:05:18.934248Z"
+     "iopub.execute_input": "2024-12-29T02:15:44.554704Z",
+     "iopub.status.busy": "2024-12-29T02:15:44.554122Z",
+     "iopub.status.idle": "2024-12-29T02:15:44.564106Z",
+     "shell.execute_reply": "2024-12-29T02:15:44.563305Z",
+     "shell.execute_reply.started": "2024-12-29T02:15:44.554668Z"
     }
    },
    "outputs": [],
    "source": [
-    "import tempfile\n",
-    "\n",
-    "df = pd.DataFrame({'a': range(10), 'b': range(10)})\n",
+    "df = pd.DataFrame({'a': range(10)})\n",
     "t1 = uck.Table(df)\n",
     "\n",
-    "with tempfile.NamedTemporaryFile(suffix='.csv') as tf:\n",
-    "    name = tf.name\n",
-    "    t1.save(name)\n",
-    "    t2 = uck.Table(name)\n",
-    "    assert repr(t1) == repr(t2)"
+    "t2 = uck.Table(t1.do('arrow'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-29T02:15:48.210732Z",
+     "iopub.status.busy": "2024-12-29T02:15:48.210122Z",
+     "iopub.status.idle": "2024-12-29T02:15:48.293318Z",
+     "shell.execute_reply": "2024-12-29T02:15:48.293031Z",
+     "shell.execute_reply.started": "2024-12-29T02:15:48.210685Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     0 │\n",
+       "│     1 │\n",
+       "│     2 │\n",
+       "│     3 │\n",
+       "│     4 │\n",
+       "│     5 │\n",
+       "│     6 │\n",
+       "│     7 │\n",
+       "│     8 │\n",
+       "│     9 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
